--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -56,12 +56,13 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:weightSum="100"
-        android:paddingTop="5dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@color/white"
         >
         <LinearLayout
+            android:paddingTop="5dp"
+            android:background="@color/colorPrimary"
             android:id="@+id/bot_store"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -87,11 +88,11 @@
                 />
         </LinearLayout>
         <LinearLayout
+            android:paddingTop="5dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_weight="20"
-
             android:id="@+id/bot_categories"
             >
             <TextView
@@ -112,6 +113,7 @@
                 />
         </LinearLayout>
         <LinearLayout
+            android:paddingTop="5dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -136,6 +138,7 @@
                 />
         </LinearLayout>
         <RelativeLayout
+            android:paddingTop="5dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="20"
@@ -180,6 +183,7 @@
 
         </RelativeLayout>
         <LinearLayout
+            android:paddingTop="5dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
