--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -115,13 +115,15 @@
             android:layout_marginTop="40dp"
             android:background="@drawable/bac1">
 
-            <Fonts.LatoBLack
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="@string/btn_send"
+                android:textStyle="bold"
+                android:background="@drawable/bac2"
                 android:textColor="#fff"
-                android:textSize="@dimen/space_15"/>
+                android:textSize="17sp"/>
 
 
         </RelativeLayout>
