--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -230,10 +230,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/popular"
+                    android:visibility="gone"
                     android:textColor="@color/black"
                     android:fontFamily="@font/bold"
                     android:gravity="center"
                     android:textStyle="bold"
+                    android:id="@+id/t2"
                     android:textSize="@dimen/space_17"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/top_selling_recycler"
