--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -239,33 +239,33 @@
             android:textSize="13sp"
             android:fontFamily="@font/gotham"
             />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="3"
-            >
-<View
-    android:layout_width="0dp"
-    android:layout_height="1dp"
-    android:layout_weight="1"
-    />
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:weightSum="3"-->
+<!--            >-->
+<!--<View-->
+<!--    android:layout_width="0dp"-->
+<!--    android:layout_height="1dp"-->
+<!--    android:layout_weight="1"-->
+<!--    />-->
         <RelativeLayout
             android:id="@+id/btnContinue"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:layout_marginRight="12dp"
-            android:layout_marginLeft="12dp"
+            android:layout_marginTop="@dimen/space_8"
             android:layout_marginBottom="2dp"
-            android:background="@drawable/bac1"
             >
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="12dp"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:paddingTop="12dp"
+                android:layout_centerHorizontal="true"
+                android:paddingBottom="12dp"
                 android:gravity="center"
                 android:fontFamily="@font/bold"
                 android:text="@string/btn_continue"
@@ -277,7 +277,7 @@
 
 
         </RelativeLayout>
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
 
 <!--        <RelativeLayout-->
@@ -312,6 +312,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:gravity="center"
             android:weightSum="2"
             >
 
@@ -326,8 +327,9 @@
 
                     android:layout_marginRight="15dp"
                     android:layout_marginLeft="15dp"
-                    android:paddingTop="11dp"
-                    android:paddingBottom="11dp"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
+                    android:layout_centerVertical="true"
                     facebook:com_facebook_login_text="Facebook"
                     android:layout_centerHorizontal="true"
                     android:layout_width="match_parent"
