--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -159,14 +159,14 @@
                 </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
 
-
                 <TextView
+                    android:visibility="gone"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="7dp"
+                    android:layout_marginStart="7dp"
                     android:layout_gravity="right"
                     android:background="@drawable/sign"
                     android:id="@+id/catname"
-                    android:visibility="gone"
                     android:layout_width="200dp"
                     android:layout_height="50dp"
                     android:text="@string/stores"
