--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -32,7 +32,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        <androidx.cardview.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
@@ -46,17 +47,18 @@
             app:contentPadding="@dimen/space_8"
             >
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/space_5"
+                android:orientation="vertical"
                 >
             <ImageView
                 android:id="@+id/img1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/fav1"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/cart2"
                 />
         <TextView
             android:layout_below="@id/img1"
@@ -68,7 +70,7 @@
             android:textSize="12sp"
             android:textColor="@color/black"
             />
-            </RelativeLayout>
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
