--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -66,6 +66,7 @@
             android:fontFamily="@font/bold"
             android:layout_width="0dp"
             android:layout_weight="10"
+            android:gravity="start"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="25sp"
