--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
                 android:padding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Eng"
+                android:text="English"
                 android:textColor="@color/green"
                 />
             <TextView
@@ -39,7 +39,7 @@
                 android:padding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="عربى"
+                android:text="العربیة"
                 android:textColor="@color/green"
                 />
         </LinearLayout>
