--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -31,7 +31,7 @@
             android:padding="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Eng"
+            android:text="English"
             android:textColor="@color/green"
             />
         <TextView
@@ -41,7 +41,7 @@
             android:padding="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="عربى"
+            android:text="العربیة"
             android:textColor="@color/green"
             />
     </LinearLayout>
