--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2abcbc</color>
-    <color name="colorPrimaryDark">#7ad6d6</color>
-    <color name="colorAccent">#2abcbc</color>
+    <color name="colorPrimary">#7DBCBC</color>
+    <color name="colorPrimaryDark">#7DBCBC</color>
+    <color name="colorAccent">#7DBCBC</color>
     <color name="white">#ffffff</color>
     <color name="gray">#E3E3E3</color>
     <color name="black">#000000</color>
@@ -16,13 +16,13 @@
     <color name="purple">#ed0bc0</color>
 
     <color name="splash_pink">#ff69b4</color>
-    <color name="green">#2abcbc</color>
+    <color name="green">#7DBCBC</color>
     <color name="light_gray">#faf5f5</color>
     <color name="contact_name">#333333</color>
     <color name="contact_number">#8c8c8c</color>
 
 
-    <color name="color1">#2abcbc</color>
-    <color name="color2">#7ad6d6</color>
+    <color name="color1">#7DBCBC</color>
+    <color name="color2">#7DBCBC</color>
 
 </resources>
