--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,6 +69,9 @@
                 android:textColor="@color/white"
 
                 />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -335,27 +338,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-            <RelativeLayout
-                android:id="@+id/btnRegister"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="12dp"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:background="@drawable/bac2">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/btn_Register"
-                    android:padding="@dimen/space_12"
-                    android:textColor="#fff"
-                    android:textSize="17dp"
-                    android:textStyle="bold"/>
-
-
-            </RelativeLayout>
 
 
             <TextView
@@ -372,6 +355,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="2"
+                android:layout_marginBottom="@dimen/space_20"
                 >
 
                 <RelativeLayout
@@ -414,8 +398,35 @@
             </LinearLayout>
 
 
-        </LinearLayout>
 
+        </LinearLayout>
+                <RelativeLayout
+                    android:id="@+id/btnRegister"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
+                    android:gravity="center"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center"
+                    android:layout_alignParentBottom="true"
+                    android:background="@drawable/bac2">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/btn_Register"
+                        android:textColor="#fff"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp"
+                        android:paddingRight="30dp"
+                        android:paddingLeft="30dp"
+                        android:textSize="17dp"
+                        android:textStyle="bold"/>
+
+
+                </RelativeLayout>
+            </RelativeLayout>
 
 </LinearLayout>
     </ScrollView>
