--- a/app/src/main/res/layout/fragment_empty_cart.xml
+++ b/app/src/main/res/layout/fragment_empty_cart.xml
@@ -12,14 +12,14 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/empty_cart1" />
+        android:src="@drawable/cart2" />
 
     <Fonts.LatoBLack
         android:layout_width="wrap_content"
