--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -58,7 +58,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/cart2"
+                android:background="@drawable/fav"
                 />
         <TextView
             android:layout_below="@id/img1"
@@ -66,6 +66,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/fav_prod"
             android:textAlignment="center"
+
             android:text="@string/fav_prod"
             android:textSize="12sp"
             android:textColor="@color/black"
