--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -197,6 +197,7 @@
                 android:orientation="horizontal"
                 >
             <TextView
+                android:id="@+id/walletam"
                 android:textSize="12sp"
                 android:gravity="center"
                 android:layout_gravity="center"
