--- a/app/src/main/res/layout/fragment_empty_cart.xml
+++ b/app/src/main/res/layout/fragment_empty_cart.xml
@@ -73,7 +73,7 @@
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/goshopnow"/>
+            android:src="@drawable/goshop"/>
 
     </RelativeLayout>
 
