--- a/app/src/main/res/drawable/bg_rounded_button1.xml
+++ b/app/src/main/res/drawable/bg_rounded_button1.xml
@@ -6,7 +6,7 @@
     >
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/black" />
             <padding
                 android:bottom="8dp"
                 android:left="12dp"
