--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -118,15 +118,16 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="80dp"
                     android:orientation="horizontal"
-                    android:gravity="center_horizontal">
+                    android:weightSum="3">
                     <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent">
                         <androidx.cardview.widget.CardView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:layout_centerInParent="true"
                             app:contentPadding="@dimen/space_5"
                             app:cardCornerRadius="@dimen/space_10"
@@ -134,9 +135,10 @@
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="5dp"
                             android:layout_marginBottom="@dimen/space_10">
-                            <LinearLayout
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent"
+                                android:gravity="center">
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -144,15 +146,16 @@
                                     android:text="@string/Coupons"
                                     android:textColor="@color/black"
                                     />
-                            </LinearLayout>
+                            </RelativeLayout>
                         </androidx.cardview.widget.CardView>
                     </RelativeLayout>
                     <RelativeLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content">
                         <androidx.cardview.widget.CardView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:layout_centerInParent="true"
                             app:contentPadding="@dimen/space_5"
                             app:cardCornerRadius="@dimen/space_10"
@@ -160,9 +163,10 @@
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="5dp"
                             android:layout_marginBottom="@dimen/space_10">
-                            <LinearLayout
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent"
+                                android:gravity="center">
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -172,17 +176,18 @@
                                     android:paddingRight="10dp"
                                     android:textColor="@color/black"
                                     />
-                            </LinearLayout>
+                            </RelativeLayout>
                         </androidx.cardview.widget.CardView>
                     </RelativeLayout>
 
                     <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:layout_centerInParent="true"
                             android:layout_marginBottom="@dimen/space_10"
                             app:cardCornerRadius="@dimen/space_10"
@@ -191,9 +196,10 @@
                             android:layout_marginRight="5dp"
                             app:contentPadding="@dimen/space_5">
 
-                            <LinearLayout
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent"
+                                android:gravity="center">
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -201,7 +207,7 @@
                                     android:layout_gravity="center_horizontal"
                                     android:text="@string/FreeShipping"
                                     android:textColor="@color/black" />
-                            </LinearLayout>
+                            </RelativeLayout>
                         </androidx.cardview.widget.CardView>
                     </RelativeLayout>
 
@@ -267,8 +273,7 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/bold"/>
+                    android:textSize="18sp"/>
 
 
                 <com.facebook.shimmer.ShimmerFrameLayout
