--- a/app/src/main/res/layout/fragment_empty_cart.xml
+++ b/app/src/main/res/layout/fragment_empty_cart.xml
@@ -32,14 +32,14 @@
         android:text="@string/cart_em"
         android:textAlignment="center"
         android:textColor="@color/green"
-        android:textSize="@dimen/text_size_large"
+        android:textSize="26sp"
         android:textStyle="bold"
         android:fontFamily="@font/bold"
         tools:layout_editor_absoluteX="10dp"
         tools:layout_editor_absoluteY="326dp" />
 
     <Fonts.LatoBLack
-        android:layout_width="348dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/space_8"
@@ -49,11 +49,9 @@
         android:text="@string/add_cart"
         android:textAlignment="center"
         android:textColor="@color/dark_gray"
-        android:textSize="@dimen/text_size_normal"
+        android:textSize="22dp"
         android:textStyle="bold"
-        android:fontFamily="@font/bold"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="326dp" />
+        android:fontFamily="@font/bold" />
 
     <RelativeLayout
         android:id="@+id/btn_shopnow"
