--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
             android:layout_width="0dp"
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/bold"
+            android:textStyle="bold"
             android:text="@string/btn_continueto"
             android:layout_gravity="center"
             android:gravity="center"
@@ -142,7 +142,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1.5"
+        android:layout_weight="0.5"
         />
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
@@ -200,7 +200,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1.5"/>
+        android:layout_weight="0.5"/>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="7"
@@ -258,16 +258,17 @@
             android:layout_marginBottom="2dp"
             >
 
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:paddingLeft="25dp"
                 android:paddingRight="25dp"
                 android:paddingTop="12dp"
-                android:layout_centerHorizontal="true"
+
                 android:paddingBottom="12dp"
                 android:gravity="center"
-                android:fontFamily="@font/bold"
+
                 android:text="@string/btn_continue"
                 android:background="@drawable/bac2"
                 android:textColor="#fff"
@@ -303,7 +304,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="-OR-"
-            android:fontFamily="@font/gotham"
+
             android:textAlignment="center"
             android:textSize="17sp"
             />
@@ -364,7 +365,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="40dp"
             android:orientation="horizontal"
             >
 
@@ -376,7 +377,7 @@
                 android:gravity="center"
 
                 android:text="@string/create"
-                android:fontFamily="@font/bold"
+
                 android:textColor="@color/black"
                 />
             <TextView
@@ -388,7 +389,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
                 android:text="@string/sign_up"
-                android:fontFamily="@font/bold"
+
                 android:textColor="@color/green"
                 />
 
@@ -399,7 +400,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="50dp"
             android:orientation="horizontal"
             >
 
@@ -409,7 +410,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:text="@string/or_sign"
-                android:fontFamily="@font/bold"
+
                 android:textColor="@color/black"
                 />
             <TextView
@@ -423,7 +424,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:text="@string/guest"
-                android:fontFamily="@font/bold"
+
                 android:textColor="@color/black"
                 />
 
