--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -93,9 +93,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@color/white"
+            android:background="@color/black"
             android:text="Submit"
-            android:textColor="@color/green"
+            android:textColor="@color/white"
             android:textSize="22dp"/>
 
 
