--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,41 +6,47 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/ll1"
+
     tools:context="gogrocer.tcc.LoginActivity"
     android:fillViewport="true">
 
     <RelativeLayout
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
         <LinearLayout
             android:id="@+id/laddan"
             android:layout_margin="10dp"
-            android:background="@color/green"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
             <TextView
-                android:background="@color/white"
                 android:layout_margin="1dp"
                 android:id="@+id/eng"
                 android:padding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="English"
-                android:textColor="@color/green"
+                android:textColor="@color/white"
                 />
             <TextView
-                android:background="@color/white"
+                android:layout_margin="1dp"
+                android:padding="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/"
+                android:textColor="@color/white"
+                />
+            <TextView
                 android:layout_margin="1dp"
                 android:id="@+id/arab"
                 android:padding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="العربیة"
-                android:textColor="@color/green"
+                android:textColor="@color/white"
                 />
         </LinearLayout>
 
@@ -53,8 +59,11 @@
             android:layout_height="12dp"
             android:background="@drawable/pinky"
             />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
         <LinearLayout
-            android:layout_below="@id/laddan"
             android:id="@+id/rr1"
             android:weightSum="1"
             android:layout_marginTop="50dp"
@@ -68,8 +77,7 @@
             android:textStyle="bold"
             android:text="@string/btn_continueto"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="70dp"
             android:textSize="20sp"
             android:textColor="@color/black"
             android:textAllCaps="false"
@@ -149,7 +157,7 @@
             android:layout_height="wrap_content"
             app:hintAnimationEnabled="false"
             app:hintEnabled="false"
-            android:layout_weight="7"
+            android:layout_weight="8"
             android:layout_margin="5dp"
             app:passwordToggleEnabled="true">
             <com.google.android.material.textfield.TextInputEditText
@@ -203,7 +211,7 @@
         android:layout_weight="0.5"/>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
-            android:layout_weight="7"
+            android:layout_weight="8"
             android:layout_height="wrap_content"
             app:hintAnimationEnabled="false"
 
@@ -233,7 +241,7 @@
 
             android:layout_marginRight="60dp"
             android:textStyle="italic"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="60dp"
             android:text="@string/forgot"
             android:textColor="@color/green"
             android:textSize="13sp"
@@ -260,12 +268,13 @@
 
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="25dp"
                 android:paddingRight="25dp"
                 android:paddingTop="12dp"
 
+                android:layout_centerHorizontal="true"
                 android:paddingBottom="12dp"
                 android:gravity="center"
 
@@ -306,6 +315,7 @@
             android:text="-OR-"
 
             android:textAlignment="center"
+            android:layout_margin="@dimen/space_10"
             android:textSize="17sp"
             />
 
@@ -366,6 +376,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="40dp"
+            android:layout_marginRight="50dp"
             android:orientation="horizontal"
             >
 
@@ -401,6 +412,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
             android:orientation="horizontal"
             >
 
@@ -416,7 +428,7 @@
             <TextView
                 android:onClick="guest"
                 android:padding="8dp"
-                android:background="@drawable/back_fb"
+                android:background="@drawable/backfb2"
                 android:layout_gravity="center"
                 android:layout_marginStart="7dp"
                 android:layout_marginEnd="7dp"
@@ -430,7 +442,7 @@
 
         </LinearLayout>
 
-
+        </RelativeLayout>
 
     </RelativeLayout>
 </LinearLayout>
