--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -436,6 +436,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:text="@string/guest"
+                android:id="@+id/guest"
 
                 android:textColor="@color/black"
                 />
