--- a/app/src/main/res/layout/fragment_delivery_time.xml
+++ b/app/src/main/res/layout/fragment_delivery_time.xml
@@ -102,19 +102,23 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginLeft="12dp"
                         android:textColor="#000"
+                        android:background="@drawable/backfb2"
                         android:text="@string/tv_del_address"
+                        android:layout_toEndOf="@+id/tv_deli_add_address"
                         android:textAlignment="center"
+                        android:padding="18dp"
                         android:textSize="15sp"
-                        android:textStyle="bold"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true" />
+                        />
 
                     <RelativeLayout
                         android:id="@+id/tv_deli_add_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
+
                         android:layout_marginTop="12dp"
                         android:layout_marginEnd="12dp"
                         android:layout_marginBottom="12dp"
