--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -46,15 +46,15 @@
                     android:src="@drawable/lens" />
 
                 <TextView
-                    android:textStyle="bold"
+
                     android:fontFamily="@font/bold"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="@dimen/space_4"
-                    android:layout_toRightOf="@id/lens"
+                    android:layout_toEndOf="@+id/lens"
                     android:gravity="top"
-                    android:text="Search For Products,Brands and More"
+                    android:text="@string/searchtext2"
                     android:textColor="@color/dark_gray"
                     android:textSize="12sp" />
             </RelativeLayout>
@@ -62,11 +62,11 @@
 
         <TextView
             android:text="J6"
+            android:theme="@style/AppTheme"
             android:layout_gravity="center"
-            android:fontFamily="@font/bold"
             android:layout_width="0dp"
             android:layout_weight="10"
-            android:gravity="start"
+            android:gravity="center"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="25sp"
