--- a/app/src/main/res/layout/row_store.xml
+++ b/app/src/main/res/layout/row_store.xml
@@ -19,10 +19,10 @@
             android:orientation="vertical">
 
             <ImageView
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 android:id="@+id/store_image"
                 android:layout_width="wrap_content"
-                android:layout_height="100dp"
+                android:layout_height="110dp"
                 android:src="@drawable/icon"
                 />
 
